[gd_scene load_steps=5 format=3 uid="uid://6aeqqfyoksxp"]

[ext_resource type="Script" uid="uid://bw7eeb5ib1ftn" path="res://Scripts/Combat/enemy_triangle_triagon.gd" id="1_67o51"]
[ext_resource type="Texture2D" uid="uid://bbifmjfm3qdie" path="res://Assets/spritePNGs/Boss_Triagon.png" id="2_67o51"]
[ext_resource type="PackedScene" uid="uid://sus6s80ptul7" path="res://AI Modules/Detectors/target_detector.tscn" id="3_uobuv"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_1irl8"]
points = PackedVector2Array(548, 0, -477, 526, -477, -528)

[node name="EnemyCircleTriagon" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_67o51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_1irl8")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_67o51")

[node name="TargetDetector" parent="." instance=ExtResource("3_uobuv")]
visible = false
scale = Vector2(100, 100)

[node name="hp_tracker" type="Label" parent="."]
offset_left = -607.0
offset_top = 73.0
offset_right = -567.0
offset_bottom = 96.0
rotation = -1.5708
scale = Vector2(4, 4)
text = "1000"

[node name="passive_marker_1" type="Marker2D" parent="."]
position = Vector2(598, 0)

[node name="passive_marker_2" type="Marker2D" parent="."]
position = Vector2(0, -307)

[node name="passive_marker_3" type="Marker2D" parent="."]
position = Vector2(0, 307)

[node name="passive_marker_4" type="Marker2D" parent="."]
position = Vector2(-520, -575)

[node name="passive_marker_5" type="Marker2D" parent="."]
position = Vector2(-520, 574)
